--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -8,7 +8,7 @@
   text-align: center;
 
   background-color: var(--dark-bg);
-  background-image: url("../../../public/header_bg.png");
+  background-image: url("../../../public/header_bg.webp");
   background-repeat: no-repeat;
   background-size: auto;
   background-position: center center;
